--- a/src/index.css
+++ b/src/index.css
@@ -39,6 +39,13 @@ code {
   object-fit: cover;
 }
 
+.card-img-full {
+  width: 25%;
+  height: 25%;
+  align-self: center;
+}
+
+
 .inner {
   overflow: hidden;
   transition: max-height 0.2s ease;
