--- a/src/index.css
+++ b/src/index.css
@@ -79,3 +79,14 @@ code {
 .ui.inverted.menu {
   background: blue;
 }
+
+@media all and (min-width: 480px) {
+  .Login {
+    padding: 60px 0;
+  }
+
+  .Login form {
+    margin: 0 auto;
+    max-width: 320px;
+  }
+}
