--- a/src/index.css
+++ b/src/index.css
@@ -23,6 +23,10 @@ code {
 
 .card {
   min-width: 20%;
+  height: 50vh;
+  border: none;
+  margin: 20px 0px;
+  padding: 0px;
 }
 
 @media (min-width: 576px) {
@@ -35,8 +39,9 @@ code {
 
 .card-img {
   width: 100%;
-  /* height: 20vh; */
-  object-fit: cover;
+  height: 50%;
+  /* object-fit: cover; */
+  margin: 0 auto;
 }
 
 .card-img-full {
@@ -80,6 +85,15 @@ code {
   background: blue;
 }
 
+.ui.left.visible.sidebar {
+  width: 120px;
+  padding-top: 10px;
+}
+
+.ui.labeled.icon.menu .item {
+  margin: 20px 5px;
+}
+
 @media all and (min-width: 480px) {
   .Login {
     padding: 60px 0;
@@ -89,4 +103,13 @@ code {
     margin: 0 auto;
     max-width: 320px;
   }
+}
+
+.vertically-centered {
+  margin: 0;
+  position: absolute;
+  top: 50%;
+  left: 55%;
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
 }
